Add rename mutilple sheets feature and display mode in status bar

--- a/final-installation/VBA-files-Danh-Tools-Installation/Classes/AutoAddin.cls
+++ b/final-installation/VBA-files-Danh-Tools-Installation/Classes/AutoAddin.cls
@@ -88,7 +88,7 @@ Private Sub enableAddin(ByRef isEnable As Boolean)
 End Sub
 
 Private Sub changeWBAcessToReadOnly(ByRef wb As Workbook)
-    If Not wb.ReadOnly Then wb.ChangeFileAccess Mode:=xlReadOnly
+    If Not wb.ReadOnly Then wb.ChangeFileAccess MODE:=xlReadOnly
 End Sub
 
 Private Sub installAddin()
